fixed styling issues with the login and signup boxes, fixed a bug where clicking on tag1 wouldnt work, fixed a bug with the alert message being too tall

--- a/website/static/login-style.css
+++ b/website/static/login-style.css
@@ -12,11 +12,14 @@ body {
 
 .form-group {
   width: 320px;
-  margin: 200px auto 0;
   background-color: #ffffff;
   border-radius: 20px;
   padding: 20px;
   text-align: center;
+  position:absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
